# advent-of-code-2025

./: .gitignore  CMakeLists.txt
AdventOfCode2025/: AdventOfCode2025.sln  Program.cpp
AdventOfCode2025/AdventOfCode2025/: AdventOfCode2025.vcxproj.filters  Day1Solution.cpp  Day1Solution.h  Program.cpp
AdventOfCode2025/AdventOfCode2025/x64/Debug/: AdventOfCode2025.exe.recipe  AdventOfCode2025.ilk  vc143.idb
AdventOfCode2025/AdventOfCode2025/x64/Debug/AdventOfCode2025.tlog/: AdventOfCode2025.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
AdventOfCode2025/Day1/: AdventOfCode2025.aps  AdventOfCode2025.vcxproj  Day1Solution.cpp  Day1Solution.h  day_1_test_input_2.txt
AdventOfCode2025/Day2/: Day2Solution.cpp  Day2Solution.h
AdventOfCode2025/Day3/: Day3Solution.cpp  Day3Solution.h
AdventOfCode2025/Day4/: Day4Solution.cpp  Day4Solution.h
AdventOfCode2025/Day5/: Day5Solution.cpp  Day5Solution.h
AdventOfCode2025/Day6/: Day6Solution.cpp  Day6Solution.h
AdventOfCode2025/Day7/: Day7Solution.cpp  Day7Solution.h
AdventOfCode2025/Day8/: Day8Solution.cpp  Day8Solution.h
AdventOfCode2025/util/: Pair.h  ULongTrie.cpp  ULongTrie.h
